--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>TopClean</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
     <nav class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a href="#home">
+            <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
+            width=150" height="70">
+         </a>
         <a href="#services">Services</a>
         <a href="#contact">Kontakt</a>
         <a href="#about">Über uns</a>
 
 
     </nav>
-<main id="main">
-    <h1>Topclean gebäude service</h1>
-    <div id="main-div">
-        asd
-        asd
-        sad
-        <img id="element-pic" src="img/cleaning-tools-hero.jpeg" alt="TopClean picture">
-    </div>
+    <main id="main">
+        <div id="main-div">
+            <img id="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
+        </div>
 
 
 
-</main>
-    
+    </main>
+
 </body>
+
 </html>
