--- a/contactPage.html
+++ b/contactPage.html
@@ -20,29 +20,17 @@
 
 <body>
     <nav class="topnav">
-        <img alt="Qries" src="img/favicon/android-chrome-192x192.png"width=150" height="70">
-        <a class="buttons" href="#services">Services</a>
-        <a class="buttons" href="#contact">Kontakt</a>
-        <a class="buttons" href="#about">Über uns</a>
-    <nav class="mobile-topnav">
-        <a #mobile-badge href="/index.html">
+        <a href="/index.html">
             <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
-            width="50" height="50">
-            </a>
-        <a class="mobile-buttons" href="#services">Services</a>
-        <a class="mobile-buttons" href="#contact">Kontakt</a>
-        <a class="mobile-buttons" href="#about">Über uns</a>
+            width=150" height="70">
+         </a>
+        <a class="buttons" href="#services">Services</a>
+        <a class="buttons" href="/contactPage.html">Kontakt</a>
+        <a class="buttons" href="#about">Über uns</a>
 
 
     </nav>
     <main id="main">
-        <div id="main-div">
-            <img id="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
-        </div>
-        <div class="mobile-div">
-            <img id="mobile-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-        </div>
-
     </main>
     <footer>
         <nav class="bottom-nav">
@@ -50,12 +38,7 @@
             <a href="#services">Services</a>
             <a href="#contact">Kontakt</a>
             <a href="#about">Über uns</a>
-        </nav>
-        <nav class="mobile-bottom-nav">
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Kontakt</a>
-            <a href="#about">Über uns</a>
+
         </nav>
     </footer>
 
