--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="topnav">
-        <img alt="Qries" src="img/favicon/android-chrome-192x192.png"width=150" height="70">
+        <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
         <a class="buttons" href="#services">Services</a>
         <a class="buttons" href="#contact">Kontakt</a>
         <a class="buttons" href="#about">Über uns</a>
