--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="app.js" type="module"></script>
     <title>TopClean</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -21,9 +21,9 @@
 <body>
     <nav class="topnav">
         <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
-        <a class="buttons"  id="servicesBtn" href="#services">Services</a>
-        <a class="buttons" href="#contact">Kontakt</a>
-        <a class="buttons" href="#about">Über uns</a>
+        <a class="buttons"  id="servicesBtn" href="#services">Leistungen</a>
+        <a class="buttons" id="contactBtn" href="#contact">Kontakt</a>
+        <a class="buttons" id="aboutBtn" href="#about">Über uns</a>
     <nav class="mobile-topnav">
         <a #mobile-badge href="/index.html">
             <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
@@ -42,19 +42,34 @@
         <div id="services-page">
             <img class="element-pic" id="services-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="services-text">
-                <h1>Services</h1><br>
-                Grundreinigung <br>
-                Bodenreinigung <br>
-                Glasreinigung <br>
-                Fensterreinigung <br>
-                Büroreinigung <br>
-                Baureinigung <br>
-                Endreinigung <br>
-                Treppenreinigung <br>
-                Sonderreinigung <br>
-                Außenreinigung <br>
-                Autopflege <br>
-
+                <h1>Leistungen</h1><br>
+                <p>Bodenreinigung</p>
+                <p>Glasreinigung</p>
+                <p>Fensterreinigung</p>
+                <p>Büroreinigung</p>
+                <p>Baureinigung</p>
+                <p>Endreinigung</p>
+                <p>Treppenreinigung</p>
+                <p>Außenreinigung</p>
+                <p>Autopflege</p>
+            </div>
+        </div>
+        <div id="contact-page">
+            <img class="element-pic" id="contact-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
+            <div class="contact-text">
+                <h1>Kontakt</h1><br>
+                <p>email: asdasd@mail.com</p>
+                <p>Telefonnummer: 012323253324</p>
+            </div>
+        </div>
+        <div id="about-page">
+            <img class="element-pic" id="about-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
+            <div class="about-text">
+                <h1>Über uns</h1><br>
+                <p>
+                    Wir sind ein junges dynamisches<br>
+                    Unternehmen im Bereich der...<br>
+                  </p>
             </div>
         </div>
         <div class="mobile-div">
