--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <nav class="topnav">
         <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
-        <a class="buttons"  id="servicesBtn" href="#services">Leistungen</a>
-        <a class="buttons" id="contactBtn" href="#contact">Kontakt</a>
-        <a class="buttons" id="aboutBtn" href="#about">Über uns</a>
+        <a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a>
+        <a class="buttons" id="contactBtnTop" href="#contact">Kontakt</a>
+        <a class="buttons" id="aboutBtnTop" href="#about">Über uns</a>
     <nav class="mobile-topnav">
         <a #mobile-badge href="/index.html">
             <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
@@ -58,8 +58,9 @@
             <img class="element-pic" id="contact-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="contact-text">
                 <h1>Kontakt</h1><br>
-                <p>email: asdasd@mail.com</p>
-                <p>Telefonnummer: 012323253324</p>
+                <p>Geschäftsführer: Bozhidar Panayotov</p>
+                <p>email: topclean@mein.gmx</p>
+                <p>Telefonnummer: 015255288880</p>
             </div>
         </div>
         <div id="about-page">
@@ -68,7 +69,20 @@
                 <h1>Über uns</h1><br>
                 <p>
                     Wir sind ein junges dynamisches<br>
-                    Unternehmen im Bereich der...<br>
+                    Unternehmen im Bereich der<br>
+                    Gebäudereinigung und Büroreinigung.<br>
+                    Unsere Arbeit leisten wir mit hoher<br>
+                    Zuverlässigkeit, Gründlichkeit und<br>
+                    Fleiß. Wir beschäftigen erfahrene<br>
+                    Haushaltshilfen, die motiviert sind<br>
+                    und Spaß bei der Arbeit haben.<br>
+                    Alle Mitarbeiter sind haftpflicht-<br>
+                    und unfallversichert. Im<br>
+                    Kundendienst sind Sie immer auf<br>
+                    der sicheren Seite mit unserer<br>
+                    Schlüsselversicherung. Termine<br>
+                    stimmen wir mit Ihnen individuell<br>
+                    und flexibel Ab.<br>
                   </p>
             </div>
         </div>
@@ -79,14 +93,14 @@
     </main>
     <footer>
         <nav class="bottom-nav">
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Kontakt</a>
-            <a href="#about">Über uns</a>
+            <a id="homeBtnFooter" href="#home">Home</a>
+            <a id="servicesBtnFooter" href="#services">Leistungen</a>
+            <a id="contactBtnFooter" href="#contact">Kontakt</a>
+            <a id="aboutBtnFooter" href="#about">Über uns</a>
         </nav>
         <nav class="mobile-bottom-nav">
             <a href="#home">Home</a>
-            <a href="#services">Services</a>
+            <a href="#services">Leistungen</a>
             <a href="#contact">Kontakt</a>
             <a href="#about">Über uns</a>
         </nav>
