bottom text added
bottom text and css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <main id="main">
         <div id="main-div">
             <img class="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
+            <div class="bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE</div>
         </div>
         <div id="services-page">
             <img class="element-pic" id="services-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
@@ -82,7 +83,7 @@
                     der sicheren Seite mit unserer<br>
                     Schlüsselversicherung. Termine<br>
                     stimmen wir mit Ihnen individuell<br>
-                    und flexibel Ab.<br>
+                    und flexibel ab.<br>
                   </p>
             </div>
         </div>
