--- a/index.html
+++ b/index.html
@@ -19,21 +19,12 @@
 </head>
 
 <body>
+    <div class="web-version">
     <nav class="topnav">
         <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
         <a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a>
         <a class="buttons" id="contactBtnTop" href="#contact">Kontakt</a>
         <a class="buttons" id="aboutBtnTop" href="#about">Über uns</a>
-    <nav class="mobile-topnav">
-        <a #mobile-badge href="/index.html">
-            <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
-            width="50" height="50">
-            </a>
-        <a class="mobile-buttons" href="#services">Services</a>
-        <a class="mobile-buttons" href="#contact">Kontakt</a>
-        <a class="mobile-buttons" href="#about">Über uns</a>
-
-
     </nav>
     <main id="main">
         <div id="main-div">
@@ -87,10 +78,6 @@
                   </p>
             </div>
         </div>
-        <div class="mobile-div">
-            <img class="mobile-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-        </div>
-
     </main>
     <footer>
         <nav class="bottom-nav">
@@ -99,14 +86,80 @@
             <a id="contactBtnFooter" href="#contact">Kontakt</a>
             <a id="aboutBtnFooter" href="#about">Über uns</a>
         </nav>
+    </footer>
+</div>
+<div class="mobile-version">
+    <nav class="mobile-topnav">
+        <a #mobile-badge href="/index.html">
+            <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
+            width="50" height="50">
+            </a>
+        <a class="mobile-buttons" href="#services">Services</a>
+        <a class="mobile-buttons" href="#contact">Kontakt</a>
+        <a class="mobile-buttons" href="#about">Über uns</a>
+    </nav>
+    <main id="mobile-main">
+        <div class="mobile-main">
+            <img class="mobile-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
+            <div class="mobile-bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
+        </div>
+        <div id="mobile-services-page">
+            <img class="mobile-element-pic" id="mobile-services-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
+            <div class="mobile-services-text">
+                <h1>Leistungen</h1><br>
+                <p>Bodenreinigung</p>
+                <p>Glasreinigung</p>
+                <p>Fensterreinigung</p>
+                <p>Büroreinigung</p>
+                <p>Baureinigung</p>
+                <p>Endreinigung</p>
+                <p>Treppenreinigung</p>
+                <p>Außenreinigung</p>
+                <p>Autopflege</p>
+            </div>
+        </div>
+        <div id="mobile-contact-page">
+            <img class="mobile-element-pic" id="mobile-contact-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
+            <div class="mobile-contact-text">
+                <h1>Kontakt</h1><br>
+                <p>Geschäftsführer: Bozhidar Panayotov</p>
+                <p>email: topclean@mein.gmx</p>
+                <p>Telefonnummer: 015255288880</p>
+            </div>
+        </div>
+        <div id="mobile-about-page">
+            <img class="mobile-element-pic" id="mobile-about-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
+            <div class="mobile-about-text">
+                <h1>Über uns</h1><br>
+                <p>
+                    Wir sind ein junges dynamisches<br>
+                    Unternehmen im Bereich der<br>
+                    Gebäudereinigung und Büroreinigung.<br>
+                    Unsere Arbeit leisten wir mit hoher<br>
+                    Zuverlässigkeit, Gründlichkeit und<br>
+                    Fleiß. Wir beschäftigen erfahrene<br>
+                    Haushaltshilfen, die motiviert sind<br>
+                    und Spaß bei der Arbeit haben.<br>
+                    Alle Mitarbeiter sind haftpflicht-<br>
+                    und unfallversichert. Im<br>
+                    Kundendienst sind Sie immer auf<br>
+                    der sicheren Seite mit unserer<br>
+                    Schlüsselversicherung. Termine<br>
+                    stimmen wir mit Ihnen individuell<br>
+                    und flexibel ab.<br>
+                  </p>
+            </div>
+        </div>
+    </main>
+    <footer id="mobile-footer">
         <nav class="mobile-bottom-nav">
-            <a href="#home">Home</a>
-            <a href="#services">Leistungen</a>
-            <a href="#contact">Kontakt</a>
-            <a href="#about">Über uns</a>
+            <a id="mobileHomeBtnFooter" href="#home">Home</a>
+            <a id="mobileServicesBtnFooter" href="#services">Leistungen</a>
+            <a id="mobileContactBtnFooter" href="#contact">Kontakt</a>
+            <a id="mobileAboutBtnFooter" href="#about">Über uns</a>
         </nav>
     </footer>
-
+</div>
 </body>
 
 </html>
