--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main id="main">
         <div id="main-div">
             <img class="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
-            <div class="bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE</div>
+            <div class="bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
         </div>
         <div id="services-page">
             <img class="element-pic" id="services-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
@@ -90,16 +90,13 @@
 </div>
 <div class="mobile-version">
     <nav class="mobile-topnav">
-        <a #mobile-badge href="/index.html">
-            <img alt="Qries" src="img/favicon/android-chrome-192x192.png"
-            width="50" height="50">
-            </a>
-        <a class="mobile-buttons" href="#services">Services</a>
-        <a class="mobile-buttons" href="#contact">Kontakt</a>
-        <a class="mobile-buttons" href="#about">Über uns</a>
+        <img id="mobile-badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="40" height="40">
+        <a class="mobile-buttons"  id="mobileServicesBtnTop" href="#services">Leistungen</a>
+        <a class="mobile-buttons" id="mobileContactBtnTop" href="#contact">Kontakt</a>
+        <a class="mobile-buttons" id="mobileAboutBtnTop" href="#about">Über uns</a>
     </nav>
     <main id="mobile-main">
-        <div class="mobile-main">
+        <div class="mobile-main-div">
             <img class="mobile-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
             <div class="mobile-bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
         </div>
