--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="web-version">
+    <div class="desktop-version">
     <nav class="topnav">
         <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
         <a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a>
