--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
     <main id="mobile-main">
         <div class="mobile-main-div">
-            <img class="mobile-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
+            <img class="mobile-element-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
             <div class="mobile-bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
         </div>
         <div id="mobile-services-page">
