removing second screen
removing second screen for mobile version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles-mobile.css"> -->
     <script src="app.js" type="module"></script>
     <title>TopClean</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -19,7 +20,6 @@
 </head>
 
 <body>
-    <div class="desktop-version">
     <nav class="topnav">
         <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
         <a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a>
@@ -87,76 +87,6 @@
             <a id="aboutBtnFooter" href="#about">Über uns</a>
         </nav>
     </footer>
-</div>
-<div class="mobile-version">
-    <nav class="mobile-topnav">
-        <img id="mobile-badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="40" height="40">
-        <a class="mobile-buttons"  id="mobileServicesBtnTop" href="#services">Leistungen</a>
-        <a class="mobile-buttons" id="mobileContactBtnTop" href="#contact">Kontakt</a>
-        <a class="mobile-buttons" id="mobileAboutBtnTop" href="#about">Über uns</a>
-    </nav>
-    <main id="mobile-main">
-        <div class="mobile-main-div">
-            <img class="mobile-element-pic" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-            <div class="mobile-bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
-        </div>
-        <div id="mobile-services-page">
-            <img class="mobile-element-pic" id="mobile-services-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-            <div class="mobile-services-text">
-                <h1>Leistungen</h1><br>
-                <p>Bodenreinigung</p>
-                <p>Glasreinigung</p>
-                <p>Fensterreinigung</p>
-                <p>Büroreinigung</p>
-                <p>Baureinigung</p>
-                <p>Endreinigung</p>
-                <p>Treppenreinigung</p>
-                <p>Außenreinigung</p>
-                <p>Autopflege</p>
-            </div>
-        </div>
-        <div id="mobile-contact-page">
-            <img class="mobile-element-pic" id="mobile-contact-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-            <div class="mobile-contact-text">
-                <h1>Kontakt</h1><br>
-                <p>Geschäftsführer: Bozhidar Panayotov</p>
-                <p>email: topclean@mein.gmx</p>
-                <p>Telefonnummer: 015255288880</p>
-            </div>
-        </div>
-        <div id="mobile-about-page">
-            <img class="mobile-element-pic" id="mobile-about-img" src="img/mobile version topclean background photo.jpg" alt="TopClean picture">
-            <div class="mobile-about-text">
-                <h1>Über uns</h1><br>
-                <p>
-                    Wir sind ein junges dynamisches<br>
-                    Unternehmen im Bereich der<br>
-                    Gebäudereinigung und Büroreinigung.<br>
-                    Unsere Arbeit leisten wir mit hoher<br>
-                    Zuverlässigkeit, Gründlichkeit und<br>
-                    Fleiß. Wir beschäftigen erfahrene<br>
-                    Haushaltshilfen, die motiviert sind<br>
-                    und Spaß bei der Arbeit haben.<br>
-                    Alle Mitarbeiter sind haftpflicht-<br>
-                    und unfallversichert. Im<br>
-                    Kundendienst sind Sie immer auf<br>
-                    der sicheren Seite mit unserer<br>
-                    Schlüsselversicherung. Termine<br>
-                    stimmen wir mit Ihnen individuell<br>
-                    und flexibel ab.<br>
-                  </p>
-            </div>
-        </div>
-    </main>
-    <footer id="mobile-footer">
-        <nav class="mobile-bottom-nav">
-            <a id="mobileHomeBtnFooter" href="#home">Home</a>
-            <a id="mobileServicesBtnFooter" href="#services">Leistungen</a>
-            <a id="mobileContactBtnFooter" href="#contact">Kontakt</a>
-            <a id="mobileAboutBtnFooter" href="#about">Über uns</a>
-        </nav>
-    </footer>
-</div>
 </body>
 
 </html>
