bottom text in paragraph
refactoring the bottom text to be in a <p> - tag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <main id="main">
         <div id="main-div">
             <img class="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
-            <div class="bottom-text">UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</div>
+            <div class="bottom-text">
+                <p>UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</p>
+            </div>
         </div>
         <div id="services-page">
             <img class="element-pic" id="services-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
