changes to list and reset.css added
- <p> items in "Leistungen"-page changed to <li>

-reset.css added to project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
+
     <!-- <link rel="stylesheet" href="styles-mobile.css"> -->
     <script src="app.js" type="module"></script>
     <title>TopClean</title>
@@ -37,15 +39,18 @@
             <img class="element-pic" id="services-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="services-text">
                 <h1>Leistungen</h1><br>
-                <p>Bodenreinigung</p>
-                <p>Glasreinigung</p>
-                <p>Fensterreinigung</p>
-                <p>Büroreinigung</p>
-                <p>Baureinigung</p>
-                <p>Endreinigung</p>
-                <p>Treppenreinigung</p>
-                <p>Außenreinigung</p>
-                <p>Autopflege</p>
+                <ul role="list">
+                    <li>Bodenreinigung</li>
+                    <li>Glasreinigung</li>
+                    <li>Fensterreinigung</li>
+                    <li>Büroreinigung</li>
+                    <li>Baureinigung</li>
+                    <li>Endreinigung</li>
+                    <li>Treppenreinigung</li>
+                    <li>Außenreinigung</li>
+                    <li>Autopflege</li>
+                </ul>
+
             </div>
         </div>
         <div id="contact-page">
