--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 
 <body>
     <nav class="topnav">
-        <img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70">
-        <a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a>
-        <a class="buttons" id="contactBtnTop" href="#contact">Kontakt</a>
-        <a class="buttons" id="aboutBtnTop" href="#about">Über uns</a>
+        <ul role="list">
+            <li><img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70"></li>
+            <li><a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a></li>
+            <li><a class="buttons" id="contactBtnTop" href="#contact">Kontakt</a></li>
+            <li><a class="buttons" id="aboutBtnTop" href="#about">Über uns</a></li>
+        </ul>
     </nav>
     <main id="main">
         <div id="main-div">
@@ -88,11 +90,15 @@
     </main>
     <footer>
         <nav class="bottom-nav">
-            <a id="homeBtnFooter" href="#home">Home</a>
-            <a id="servicesBtnFooter" href="#services">Leistungen</a>
-            <a id="contactBtnFooter" href="#contact">Kontakt</a>
-            <a id="aboutBtnFooter" href="#about">Über uns</a>
+            <ul role="list">
+                <li><a id="homeBtnFooter" href="#home">Home</a></li>
+                <li><a class="buttons"  id="servicesBtnFooter" href="#services">Leistungen</a></li>
+                <li><a class="buttons" id="contactBtnFooter" href="#contact">Kontakt</a></li>
+                <li><a class="buttons" id="aboutBtnFooter" href="#about">Über uns</a></li>
+            </ul>
+            <span>&copy; TopClean</span>
         </nav>
+
     </footer>
 </body>
 
