link for emailing and phone calling
-main text on Home page refactored from <p> to <h1>

-in "Kontakt" page email link and phone number link added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="main-div">
             <img class="element-pic" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="bottom-text">
-                <p>UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</p>
+                <h1>UNSER PROFESSIONELER GEBÄUDEREINIGUNGS-SERVICE IN LEIPZIG</h1>
             </div>
         </div>
         <div id="services-page">
@@ -59,9 +59,12 @@
             <img class="element-pic" id="contact-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="contact-text">
                 <h1>Kontakt</h1><br>
-                <p>Geschäftsführer: Bozhidar Panayotov</p>
-                <p>email: topclean@mein.gmx</p>
-                <p>Telefonnummer: 015255288880</p>
+                <ul role="list">
+                    <li>Geschäftsführer: Bozhidar Panayotov</li>
+                    <li>Email: <a href="mailto:topclean@mein.gmx">topclean@mein.gmx</a></li>
+                    <li>Telefonnummer: <a href="tel:015255288880">015255288880</a></li>
+                </ul>
+
             </div>
         </div>
         <div id="about-page">
