--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <nav class="topnav">
         <ul role="list">
             <li><img id="badge" alt="Qries" src="img/favicon/android-chrome-192x192.png"width="70" height="70"></li>
-            <li><a class="buttons"  id="servicesBtnTop" href="#services">Leistungen</a></li>
-            <li><a class="buttons" id="contactBtnTop" href="#contact">Kontakt</a></li>
-            <li><a class="buttons" id="aboutBtnTop" href="#about">Über uns</a></li>
+            <li><a class="buttons"  id="servicesBtnTop" href="#services"><i class="fas fa-broom"></i> Leistungen</a></li>
+            <li><a class="buttons" id="contactBtnTop" href="#contact"><i class="fas fa-book"></i> Kontakt</a></li>
+            <li><a class="buttons" id="aboutBtnTop" href="#about"><i class="fas fa-info-circle"></i> Über uns</a></li>
         </ul>
     </nav>
     <main id="main">
