phone version adjustments
- text adjustments for all pages in phone version

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <li><a class="buttons"  id="servicesBtnFooter" href="#services">Leistungen</a></li>
                 <li><a class="buttons" id="contactBtnFooter" href="#contact">Kontakt</a></li>
                 <li><a class="buttons" id="aboutBtnFooter" href="#about">Über uns</a></li>
+                <li id="copyright">&copy; TopClean</li>
             </ul>
-            <span>&copy; TopClean</span>
         </nav>
 
     </footer>
