navigations display change and responsive
-top and bottom navigation are being changed to display flex
-small adjustments for responsive design

--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
         <div id="about-page">
             <img class="element-pic" id="about-img" src="img/topclean 1980x1080 done background.jpg" alt="TopClean picture">
             <div class="about-text">
-                <h1>Über uns</h1><br>
+                <h1>Über uns</h1>
                 <p>
-                    Wir sind ein junges dynamisches<br>
-                    Unternehmen im Bereich der<br>
-                    Gebäudereinigung und Büroreinigung.<br>
-                    Unsere Arbeit leisten wir mit hoher<br>
-                    Zuverlässigkeit, Gründlichkeit und<br>
-                    Fleiß. Wir beschäftigen erfahrene<br>
-                    Haushaltshilfen, die motiviert sind<br>
-                    und Spaß bei der Arbeit haben.<br>
-                    Alle Mitarbeiter sind haftpflicht-<br>
-                    und unfallversichert. Im<br>
-                    Kundendienst sind Sie immer auf<br>
-                    der sicheren Seite mit unserer<br>
-                    Schlüsselversicherung. Termine<br>
-                    stimmen wir mit Ihnen individuell<br>
-                    und flexibel ab.<br>
+                    Wir sind ein junges dynamisches
+                    Unternehmen im Bereich der
+                    Gebäudereinigung und Büroreinigung.
+                    Unsere Arbeit leisten wir mit hoher
+                    Zuverlässigkeit, Gründlichkeit und
+                    Fleiß. Wir beschäftigen erfahrene
+                    Haushaltshilfen, die motiviert sind
+                    und Spaß bei der Arbeit haben.
+                    Alle Mitarbeiter sind haftpflicht-
+                    und unfallversichert. Im
+                    Kundendienst sind Sie immer auf
+                    der sicheren Seite mit unserer
+                    Schlüsselversicherung. Termine
+                    stimmen wir mit Ihnen individuell
+                    und flexibel ab.
                   </p>
             </div>
         </div>
@@ -94,7 +94,7 @@
     <footer>
         <nav class="bottom-nav">
             <ul role="list">
-                <li><a id="homeBtnFooter" href="#home">Home</a></li>
+                <li><a class="buttons" id="homeBtnFooter" href="#home">Home</a></li>
                 <li><a class="buttons"  id="servicesBtnFooter" href="#services">Leistungen</a></li>
                 <li><a class="buttons" id="contactBtnFooter" href="#contact">Kontakt</a></li>
                 <li><a class="buttons" id="aboutBtnFooter" href="#about">Über uns</a></li>
