responsive design adjustments
-text position adjustments
-bottom nav removed for mobile devices

--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
             <div class="services-text">
                 <h1>Leistungen</h1><br>
                 <ul role="list">
-                    <li>Bodenreinigung</li>
-                    <li>Glasreinigung</li>
-                    <li>Fensterreinigung</li>
-                    <li>Büroreinigung</li>
-                    <li>Baureinigung</li>
-                    <li>Endreinigung</li>
-                    <li>Treppenreinigung</li>
-                    <li>Außenreinigung</li>
-                    <li>Autopflege</li>
+                    <li><p>Bodenreinigung</p></li>
+                    <li><p>Fensterreinigung</p></li>
+                    <li><p>Fensterreinigung</p></li>
+                    <li><p>Glasreinigung</p></li>
+                    <li><p>Büroreinigung</p></li>
+                    <li><p>Baureinigung</p></li>
+                    <li><p>Endreinigung</p></li>
+                    <li><p>Treppenreinigung</p></li>
+                    <li><p>Außenreinigung</p></li>
+                    <li><p>Autopflege</p></li>
                 </ul>
 
             </div>
